# chinese-calendar

./: CMakeLists.txt  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  calendar.ui  ccbo.cpp  ccbo.h  chinese-calendar.desktop  chinese-calendar.pro  chinese-calendar.qrc  chinesecalendar.cpp  chinesecalendar.h  cnote.cpp  cnote.h  dateitem.cpp  dateitem.h  dateitem.ui  datemaskwidget.cpp  datemaskwidget.h  main.cpp
data/: chinese-calendar.desktop
debian/: changelog  control  copyright
skin/: black.qss  blue-skin.qss  default-skin.qss
translate/: i18_zh_CN.ts
